# FFmpegPlayer

app/: build.gradle
app/src/androidTest/java/com/hxj/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  FFmpegPlayer.cpp  FFmpegPlayer.h  JNICallbackHelper.cpp  JNICallbackHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native_jni.cpp  safe_queue.h
app/src/main/cpp/include/: log.h  threadMode.h
app/src/main/java/com/hxj/ffmpegplayer/: FFmpegPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hxj/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
